# Puripy

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
example/: hello_world.py
examples/: .properties.yaml  afterinit_and_beforedel.py  bone.py  collection_injection.py  component.py  conditions.py  configurator.py  factory.py  hello_world.py  lifecycle.py  particle.py  post_init_and_pre_del.py  properties.py  property_holder.py
puripy/: __init__.py  container.py
puripy/application/: __init__.py  puripy_application.py  puripy_application_runner.py
puripy/bone/: __init__.py  builder.py  container.py  registrar.py
puripy/component/: builder.py  container.py  registrar.py
puripy/context/: __init__.py  assembler.py  builder.py  container.py  context.py  dependency_resolver.py  post_processor.py  pre_processor.py  registrar.py  scanning_packages_resolver.py
puripy/decorator/: __init__.py  component.py  configurator.py  post_init.py  pre_del.py  property_holder.py
puripy/marker/: __init__.py  afterinit.py  beforedel.py  dependsonproperty.py  particle.py  properties.py  scanpackages.py
puripy/particle/: builder.py  container.py  registrar.py
puripy/property/: __init__.py  source_parser.py
puripy/utility/: __init__.py  component_utility.py  metadata_utility.py  reflection_utility.py  resource_utility.py  validation_utility.py
puripy/utils/: __init__.py  bone_utils.py  component_utils.py  containerized_utils.py  metadata_utils.py  particle_utils.py  property_utils.py  (+4 more)
tests/: __init__.py  patch_mocks.py  test_class_scanner.py
(+147 files in other folders)
