[project]
name = "puripy"
version = "0.1.0"
authors = [
  { name="markov-avl", email="markov.avl@ya.ru" },
]
description = "Puripy is a lightweight framework for creating general purpose applications"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/markov-avl/Puripy"
Issues = "https://github.com/markov-avl/Puripy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"